@@ -1,3 +1,11 @@
+2006-01-15  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-document-loader.c (load_local_file_real): removed
+	a debug message
+
+	* gedit/gedit-utils.c (gedit_utils_uri_exists): use DEBUG_UTILS
+	instead of DEBUG_FILE
+
 2006-01-14  Jesse van den Kieboom  <jesse@icecrew.nl>
 
 	* plugins/snippets/snippets/Snippet.py:
